--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_variables.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_variables.scss
@@ -46,9 +46,11 @@ $wc-color-12: #F6BB42;
 $wc-color-18: #FFC794;
 $wc-color-02: #ffebba;
 
+
 $wc-color-19: #292F4F;
 $wc-color-17: #3D4260;
 $wc-color-06: #003C75;
+$wc-color-26: #4B566F;
 $wc-color-14: #70748A;
 
 $wc-color-21: #496CEC;
