--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/latestEvents/latestEvents.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/latestEvents/latestEvents.directive.html
@@ -2,21 +2,18 @@
   <div class="tag" ng-if="!hideHeader" >
     <span class="lastevent-header" message key="listtable.headers.latestevent"></span>
     <span ng-if="!maxEvents" id="eventsshown">{{eventsShown(filteredEvents, isCollapsedArchive)}}</span>
-    <button ng-if="!maxEvents" id="showEventsBtn-{{certId}}" type="button" class="btn-link btn-link-link pull-right"
-            href="#event" ng-show="filteredEvents.length > 2"
-            ng-click="expandClicked()">
-      <i class="icon icon-up-open rotate-180"></i> <span message key="label.event.{{ !isCollapsedArchive }}"></span>
-    </button>
+    <ng-include ng-if="showMoreButtonLocation == 'top'" class="pull-right" src="'/web/webjars/common/minaintyg/components/latestEvents/latestEventsShowMoreButton.html'"></ng-include>
     <div style="clear:both"></div>
   </div>
   <div ng-if="filteredEvents.length > 0" ng-attr-id="event-{{certId}}">
     <div ng-repeat="event in filteredEvents track by $index" ng-if="$index < maxEventRows(isCollapsedArchive)"
          ng-init="info = getEventInfo(event)" ng-attr-id="event-{{certId}}-{{$index}}"
-         ng-class="{'event-row-tight': maxEvents, 'event-row': !maxEvents, 'stripe-dark': !maxEvents && $even}" >
+         ng-class="{'event-row-tight': tightRows, 'event-row': !tightRows, 'stripe-dark': !tightRows && $even}" >
       <span ng-attr-id="event-timestamp-{{certId}}-{{$index}}" class="latest-events-timestamp">{{info.timestamp}}</span>
       <latest-events-text class="event-text" ng-attr-id="event-text-{{::certId}}-{{::$index}}" text="info.text" view-cert="viewCert(type, id)"></latest-events-text>
     </div>
   </div>
+  <ng-include ng-if="showMoreButtonLocation == 'bottom'" src="'/web/webjars/common/minaintyg/components/latestEvents/latestEventsShowMoreButton.html'"></ng-include>
   <div ng-if="filteredEvents.length == 0" data-ng-attr-class="certificate-noevents-{{certId}}">
     <div ng-attr-id="event-{{certId}}">{{messageService.getProperty('certificates.events.noevents')}}</div>
   </div>
