--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_fonts.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_fonts.scss
@@ -23,7 +23,13 @@
   src: url('/web/webjars/common/webcert/fonts/Roboto-Regular.ttf')  format('truetype');
 }
 
+@font-face {
+  font-family: 'RobotoLight';
+  src: url('/web/webjars/common/webcert/fonts/Roboto-Light.ttf')  format('truetype');
+}
+
 $font-0: Roboto;
+$font-01: RobotoLight;
 $font-1: helvetica;
 $font-2: arial;
 $font-3: sans-serif;
@@ -32,6 +38,12 @@ $font-3: sans-serif;
 
 @mixin font-variant($font-size: 14px, $font-weight: 400) {
   font-family: $font-0, $font-1, $font-2, $font-3;
+  font-size: $font-size;
+  font-weight: $font-weight;
+}
+
+@mixin font-variant-light($font-size: 14px, $font-weight: 300) {
+  font-family: $font-01, $font-1, $font-2, $font-3;
   font-size: $font-size;
   font-weight: $font-weight;
 }
@@ -50,6 +62,23 @@ Color and background should be specified at the extension point, eg:
  }
 
  */
+
+%wc-typo-01 {
+  @include font-variant-light(25px, 400);
+}
+
+%wc-typo-02 {
+  @include font-variant(18px, 400);
+}
+
+%wc-typo-03 {
+  @include font-variant-light(18px, 400);
+}
+
+%wc-typo-04 {
+  @include font-variant(18px, 800);
+}
+
 %wc-typo-05 {
   @include font-variant(16px, 600);
 }
