INTYG-5146: La till meddelande vid DJUPINTEGRATION som visar när integrationsparameter för adress saknas

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -122,6 +122,7 @@
   @import 'gui/wcIntygRelatedOtherIntygMessage.directive.scss';
   @import 'gui/wcIntygRelatedRevokedMessage.directive.scss';
   @import 'gui/wcNewPersonIdMessage.scss';
+  @import 'gui/wcPatientAddressMissingFromIntegrationMessage.scss';
   @import 'gui/wcPatientInfoChangeMessage.scss';
   @import 'gui/wcVardPersonSekretess/wcVardPersonSekretess.directive.scss';
   @import 'intyg/read-only-view/wcIntygReadOnlyView.scss';
