INTYG-5310: initial version med högerfält för lisjp utkast (om man går via /edit-60/, alla andra sidor behöver uppdateras till att använda container-fluid som root.

--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/utkast.wrapper.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/utkast.wrapper.html
@@ -1,4 +1,4 @@
-<div class="webcert-multicol-container1 webcert-multicol-background-grey" ng-class="{'collapsed' : viewState.common.collapsedHeader}" wc-size-target>
+<div class="webcert-multicol-container1 webcert-multicol-background-grey">
   <div class="webcert-multicol-container2 webcert-multicol-background-white">
     <div class="webcert-col webcert-col-primary" ui-view="utkast"></div>
     <div class="webcert-col webcert-col-secondary webcert-multicol-background-grey" wc-authority feature="HANTERA_FRAGOR" intygstyp="{{widgetState.certificateType}}" ui-view="fragasvar"></div>
