--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/intyg/intyg.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/intyg/intyg.html
@@ -1,19 +1,33 @@
-<div class="fk7263-ns weak-hidden" ng-class="{show: viewState.common.showTemplate}">
-  <div wc-spinner label="common.load.certificate" show-spinner="!viewState.common.doneLoading"
-       show-content="viewState.common.doneLoading">
 
-    <div ui-view="header"></div>
+<div ui-view="header"></div>
+<div class="webcert-workarea-hflex-container">
 
-    <div ng-show="!viewState.common.activeErrorMessageKey">
-      <div id="certificate" ng-class="{'certificate': true, 'revoked-certificate' : viewState.common.intygProperties.isRevoked}">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="intyg-body">
-              <uv-render-components config="uvConfig" view-data="cert"></uv-render-components>
-            </div><!-- intyg body -->
+
+  <div class="webcert-workarea-intyg container-fluid" ng-show="!viewState.common.activeErrorMessageKey">
+        <!-- fk7263-ns -->
+    <div class="{{viewState.common.intyg.type}}-ns weak-hidden" ng-class="{show: viewState.common.showTemplate}">
+      <div wc-spinner label="common.load.certificate" show-spinner="!viewState.common.doneLoading"
+           show-content="viewState.common.doneLoading">
+
+        <div id="certificate" ng-class="{'certificate': true, 'revoked-certificate' : viewState.common.intygProperties.isRevoked}">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="intyg-body">
+                <uv-render-components config="uvConfig" view-data="cert"></uv-render-components>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-    </div><!-- entire intyg -->
-  </div><!--  spinner end -->
+      </div><!-- entire intyg -->
+    </div><!--  spinner end -->
+  </div>
+
+  <!-- fråga svar -->
+  <div class="webcert-workarea-supportpanel remove-when-migrated-to-supportpanel-scrollable-flex-content" wc-authority
+       feature="HANTERA_FRAGOR" intygstyp="{{widgetState.certificateType}}">
+    <h2 class="col-head">Frågor och svar</h2>
+    <div ui-view="fragasvar" />
+  </div>
+
+
 </div>
