--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/utkast.wrapper.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/utkast.wrapper.html
@@ -1,6 +1,5 @@
-<div class="webcert-multicol-container1 webcert-multicol-background-grey">
-  <div class="webcert-multicol-container2 webcert-multicol-background-white">
-    <div class="webcert-col webcert-col-primary" ui-view="utkast"></div>
-    <div class="webcert-col webcert-col-secondary webcert-multicol-background-grey" wc-authority feature="HANTERA_FRAGOR" intygstyp="{{widgetState.certificateType}}" ui-view="fragasvar"></div>
-  </div>
+
+<div class="webcert-workarea-hflex-container">
+   <div class="webcert-workarea-intyg container-fluid" ui-view="utkast"></div>
+    <div class="webcert-workarea-supportpanel remove-when-migrated-to-supportpanel-scrollable-flex-content" wc-authority feature="HANTERA_FRAGOR" intygstyp="{{widgetState.certificateType}}" ui-view="fragasvar"></div>
 </div>
