--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/intyg/intyg.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/intyg/intyg.html
@@ -1,21 +1,33 @@
-<div class="ts-diabetes-ns weak-hidden" ng-class="{show: viewState.common.showTemplate}">
-  <div wc-spinner label="common.load.certificate" show-spinner="!viewState.common.doneLoading"
-       show-content="viewState.common.doneLoading">
+<div ui-view="header"></div>
 
-    <div ui-view="header"></div>
 
-    <div ng-show="!viewState.common.activeErrorMessageKey">
-      <div id="certificate" ng-class="{'certificate': true, 'revoked-certificate' : viewState.common.intygProperties.isRevoked}">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="intyg-body">
-              <uv-render-components config="uvConfig" view-data="cert"></uv-render-components>
+<div class="webcert-workarea-hflex-container">
+  <div class="webcert-workarea-intyg container-fluid ts-diabetes-ns weak-hidden" ng-class="{show: viewState.common.showTemplate}">
+    <div wc-spinner label="common.load.certificate" show-spinner="!viewState.common.doneLoading"
+         show-content="viewState.common.doneLoading">
+
+
+      <div ng-show="!viewState.common.activeErrorMessageKey">
+        <div id="certificate"
+             ng-class="{'certificate': true, 'revoked-certificate' : viewState.common.intygProperties.isRevoked}">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="intyg-body">
+                <uv-render-components config="uvConfig" view-data="cert"></uv-render-components>
+              </div>
             </div>
           </div>
         </div>
       </div>
+      <!-- entire intyg -->
     </div>
-    <!-- entire intyg -->
+    <!--  spinner end -->
   </div>
-  <!--  spinner end -->
+
+
+  <!-- right side -->
+  <div class="webcert-workarea-supportpanel remove-when-migrated-to-supportpanel-scrollable-flex-content">
+    <h2 class="col-head">(supportPanel)</h2>
+  </div>
+
 </div>
