--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -103,7 +103,12 @@
 
 
 
-  //Flexbox app framwork classes 
+  //Flexbox app framwork classes -----------------------------
+
+
+  /*
+    root class for flex layout
+   */
   .webcert-workarea {
     //Constrain content to max width..
     max-width: $wc-max-content-width;
@@ -115,14 +120,32 @@
     align-self: center;
     width: 100%;
 
+    //defines padding for pages that have work-area-headers
+    .webcert-full-page {
+      padding:0 0 30px 0;
+    }
+    //defines padding for pages that doesn't have headers and want default margins
+    .webcert-full-page-padded {
+      //NOTE: Minimum of 15 padding left/right is needed to handle bootstrap grid negative margins
+      padding: 20px 15px 30px 15px;
+    }
+
+    .webcert-workarea-vflex-container {
+      display: flex;
+      flex:1;
+      flex-direction: column;
+    }
+
+
     .container-fluid {
-      //all "page-templates" / views such as sök / skriv intyg, ej signerade utkast etc should have this as root, to get inner vertical scrollbar
+      //all "page-templates" / views such as sök / skriv intyg, ej signerade utkast etc should also have this as root, to get inner vertical scrollbar
+      // and to work bootstraps with rows / cols
       width: 100%;
       overflow-y: auto;
     }
 
-    //Some views should have deeper containers that take up extra vertical space, and
-    // handle their own overflow
+    // Some views have deeper containers that take up extra vertical space, and
+    // handle their own overflow, eg intyg / supportpanel.
     .webcert-workarea-hflex-container {
       display: flex;
       flex: 1;
@@ -130,9 +153,19 @@
       .webcert-workarea-intyg {
         flex: 3;
         overflow-y: auto;
+        padding: 20px 15px 30px 15px;
+
       }
       .webcert-workarea-supportpanel {
         flex: 2;
+
+        //NOTE: this temporary class to allow legacy arendehantering view to be in a scrollable container to the right of intyg.
+        // When ärendehantering is supported as a tab in in supportpanel, this construct can be removed.
+        &.remove-when-migrated-to-supportpanel-scrollable-flex-content {
+          padding: 20px;
+          overflow: auto;
+        }
+
       }
     }
   }
@@ -619,89 +652,7 @@
     max-height: 29px;
   }
 
-  .webcert-multicol {
-    float: left;
-    margin: 0;
-    overflow: hidden;
-    width: 100%;
-  }
 
-  .webcert-multicol-container1, .webcert-multicol-container2 {
-    /* Equal height using http://matthewjamestaylor.com/blog/equal-height-columns-cross-browser-css-no-hacks
-     *
-     * webcert-multicol-container1 and webcert-multicol-container2 are used to set background color of each column
-     * webcert-col-primary and webcert-col-secondary are used for the content of each column
-     */
-    float: left;
-    min-height: 832px;
-    position: relative;
-    width: 100%;
-  }
-
-  .webcert-multicol-container2 {
-    right: 50%;
-  }
-
-  .webcert-multicol-background-grey {
-    background-color: $wc-color-20 !important;
-  }
-
-  .webcert-multicol-background-white {
-    background-color: $wc-color-00 !important;
-  }
-
-  .webcert-col {
-    padding: 30px;
-    position: relative;
-  }
-
-  .webcert-col-primary {
-    float: left;
-    width: 50%;
-    left: 50%;
-    padding: 30px 30px 20px 30px;
-  }
-
-  .webcert-col-secondary {
-    float: left;
-    width: 50%;
-    left: 50%;
-    position: relative;
-    padding: 30px 15px 30px 30px;
-  }
-
-  @media(max-width: 768px) {
-    .webcert-multicol-container1, .webcert-multicol-container2 {
-      float: none;
-      min-height: 0;
-      right: auto;
-    }
-    .webcert-col-primary, .webcert-col-secondary {
-      width: 100%;
-      left: auto;
-    }
-    .webcert-col-secondary {
-      min-height: 832px;
-    }
-  }
-
-  /* It is used, but the selector does not contain styling. Maybe some javascript hooks exist */
-  .webcert-col-single {
-  }
-
-  .webcert-col-shadow {
-    background-image: $url-col-shadow;
-    background-repeat: no-repeat;
-    width: 6px;
-    height: 832px;
-    top: 0;
-    left: 0;
-    position: absolute;
-  }
-
-  .webcert-col-section {
-    border-top: 1px solid $wc-color-15;
-  }
 
   .webcert-bottom-padding-section {
     padding-bottom: 10px;
