INTYG-5306: Ny layout för Date picker. Även tagit bort "overrideRender" och fixat en bug med initialt datum. Fixade så att wcSetDateOnClose direktivet inte behövs.

--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form8b.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form8b.html
@@ -43,7 +43,7 @@
                   <span wc-date-picker-field target-model="model.nedsattMed25.from"
                         on-change="onChangeNedsattMed('nedsattMed25', 'from')" dom-id="nedsattMed25from"
                         on-blur="validate()"
-                        invalid="!field8b.nedsattMed25.from.viewValid" override-render="true" format=''
+                        invalid="!field8b.nedsattMed25.from.viewValid"
                         add-date-parser="loose"></span>
                 </label>
               </div>
@@ -52,7 +52,7 @@
                   <span wc-date-picker-field target-model="model.nedsattMed25.tom"
                         on-blur="onToFieldBlur(field8b.nedsattMed25); validate()"
                         on-change="onChangeNedsattMed('nedsattMed25', 'tom')" dom-id="nedsattMed25tom"
-                        invalid="!field8b.nedsattMed25.to.viewValid" override-render="true"
+                        invalid="!field8b.nedsattMed25.to.viewValid"
                         add-date-parser="loose"></span>
                 </label>
               </div>
@@ -97,7 +97,7 @@
                   <span wc-date-picker-field target-model="model.nedsattMed50.from"
                         on-blur="validate()"
                         on-change="onChangeNedsattMed('nedsattMed50', 'from')" dom-id="nedsattMed50from"
-                        invalid="!field8b.nedsattMed50.from.viewValid" override-render="true"
+                        invalid="!field8b.nedsattMed50.from.viewValid"
                         add-date-parser="loose"></span>
                 </label>
               </div>
@@ -106,7 +106,7 @@
                   <span wc-date-picker-field target-model="model.nedsattMed50.tom"
                         on-blur="onToFieldBlur(field8b.nedsattMed50); validate()"
                         on-change="onChangeNedsattMed('nedsattMed50', 'tom')" dom-id="nedsattMed50tom"
-                        invalid="!field8b.nedsattMed50.to.viewValid" override-render="true"
+                        invalid="!field8b.nedsattMed50.to.viewValid"
                         add-date-parser="loose"></span>
                 </label>
               </div>
@@ -149,7 +149,7 @@
                   <span wc-date-picker-field target-model="model.nedsattMed75.from"
                         on-blur="validate()"
                         on-change="onChangeNedsattMed('nedsattMed75', 'from')" dom-id="nedsattMed75from"
-                        invalid="!field8b.nedsattMed75.from.viewValid" override-render="true"
+                        invalid="!field8b.nedsattMed75.from.viewValid"
                         add-date-parser="loose"></span>
                 </label>
               </div>
@@ -158,7 +158,7 @@
                   <span wc-date-picker-field target-model="model.nedsattMed75.tom"
                         on-blur="onToFieldBlur(field8b.nedsattMed75); validate()"
                         on-change="onChangeNedsattMed('nedsattMed75', 'tom')" dom-id="nedsattMed75tom"
-                        invalid="!field8b.nedsattMed75.to.viewValid" override-render="true"
+                        invalid="!field8b.nedsattMed75.to.viewValid"
                         add-date-parser="loose"></span>
                 </label>
               </div>
@@ -202,7 +202,7 @@
                   <span wc-date-picker-field target-model="model.nedsattMed100.from"
                         on-blur="validate()"
                         on-change="onChangeNedsattMed('nedsattMed100', 'from')" dom-id="nedsattMed100from"
-                        invalid="!field8b.nedsattMed100.from.viewValid" override-render="true"
+                        invalid="!field8b.nedsattMed100.from.viewValid"
                         add-date-parser="loose"></span>
                 </label>
               </div>
@@ -211,7 +211,7 @@
                   <span wc-date-picker-field target-model="model.nedsattMed100.tom"
                         on-blur="onToFieldBlur(field8b.nedsattMed100); validate()"
                         on-change="onChangeNedsattMed('nedsattMed100', 'tom')" dom-id="nedsattMed100tom"
-                        invalid="!field8b.nedsattMed100.to.viewValid" override-render="true"
+                        invalid="!field8b.nedsattMed100.to.viewValid"
                         add-date-parser="loose"></span>
                 </label>
               </div>
