INTYG-5310: Uppdaterat responsivebeteende för bättre hantering på landningssidan utifrån nya layouten

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcAppHeader.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcAppHeader.directive.scss
@@ -10,6 +10,7 @@ wc-app-header {
   display: flex;
   //Stretch on cross-axis to make items 100% height
   align-items: stretch;
+  justify-content: space-between;
   background-color: $wc-color-17;
   height: $wc-header-height;
 
