--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcAppHeader.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcAppHeader.directive.html
@@ -1,5 +1,5 @@
 <!-- logo is so simple and not used anywhere else, so it's a built-in part of the main wc-header directive -->
-<div class="logo hidden-sm hidden-xs">
+<div class="logo" ng-class="{'hidden-sm hidden-xs' : user}">
   <div class="logo-svg"></div>
 </div>
 
