INTYG-5370: anchorScrollService hanterar nu även scroll i container (intygen ligger i en div med overflow).

--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/utkast.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/utkast.html
@@ -11,10 +11,10 @@
 </div>
 
 
-<div class="webcert-workarea-hflex-container">
+<div id="edit-fk7263" class="webcert-workarea-hflex-container">
 
   <!-- FK 7263 -->
-  <div class="fk7263-ns webcert-workarea-intyg container-fluid" id="edit-fk7263">
+  <div id="certificate-content-container" class="webcert-workarea-intyg container-fluid fk7263-ns">
     <div class="edit-form legacy-intyg">
 
       <form name="certForm" novalidate autocomplete="off" wc-auto-save>
