--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/utkast.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/utkast.html
@@ -10,9 +10,9 @@
 </div>
 
 
-<div class="webcert-workarea-hflex-container">
+<div class="webcert-workarea-hflex-container" id="edit-ts-diabetes">
 
-  <div class="webcert-workarea-intyg container-fluid ts-diabetes-ns" id="edit-ts-diabetes">
+  <div id="certificate-content-container" class="webcert-workarea-intyg container-fluid ts-diabetes-ns">
     <div class="row">
       <div class="col-md-12">
 
