--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/utkast.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/utkast.html
@@ -10,9 +10,9 @@
   </div>
 </div>
 
-<div class="webcert-workarea-hflex-container">
+<div  id="edit-ts-bas" class="webcert-workarea-hflex-container">
 
-  <div class="webcert-workarea-intyg container-fluid ts-bas-ns" id="edit-ts-bas">
+  <div id="certificate-content-container" class="webcert-workarea-intyg container-fluid ts-bas-ns">
     <div class="row">
       <div class="col-md-12">
 
