--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/intyg/intyg.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/intyg/intyg.html
@@ -2,7 +2,7 @@
 
 
 <div class="webcert-workarea-hflex-container">
-  <div class="webcert-workarea-intyg container-fluid ts-diabetes-ns weak-hidden" ng-class="{show: viewState.common.showTemplate}">
+  <div id="certificate-content-container" class="webcert-workarea-intyg container-fluid ts-diabetes-ns weak-hidden" ng-class="{show: viewState.common.showTemplate}">
     <div wc-spinner label="common.load.certificate" show-spinner="!viewState.common.doneLoading"
          show-content="viewState.common.doneLoading">
 
